fix bug and update docs
