# src/main/java/com/ezyCollect/payments/payment_service/controller/WebhookController.java
@@ -2,19 +2,17 @@ package com.ezyCollect.payments.payment_service.controller;
 
 import com.ezyCollect.payments.payment_service.dto.PaymentResponse;
 import com.ezyCollect.payments.payment_service.dto.WebhookRequest;
-import com.ezyCollect.payments.payment_service.dto.WebhookResponse;
-import com.ezyCollect.payments.payment_service.entity.Webhook;
-import com.ezyCollect.payments.payment_service.exception.WebhookException;
-import com.ezyCollect.payments.payment_service.repository.WebhookRepository;
 import com.ezyCollect.payments.payment_service.service.WebhookReceivingService;
 import com.ezyCollect.payments.payment_service.service.WebhookService;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.validation.Valid;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+@Slf4j
 @RestController
 @RequestMapping("/v1/webhooks")
 public class WebhookController {
@@ -23,7 +21,6 @@ public class WebhookController {
     private final WebhookService webhookService;
 
     public WebhookController(
-            WebhookRepository webhookRepository,
             WebhookReceivingService webhookReceivingService,
             WebhookService webhookService) {
         this.webhookReceivingService = webhookReceivingService;
@@ -31,26 +28,9 @@ public class WebhookController {
     }
 
     @PostMapping("/register")
-    public ResponseEntity<WebhookResponse> registerWebhook(@RequestBody @Valid WebhookRequest request) {
-        Webhook savedWebhook;
-        try {
-            savedWebhook = webhookService.registerWebhook(request);
-        } catch (WebhookException e) {
-            WebhookResponse response = WebhookResponse.builder()
-                    .url(request.getUrl())
-                    .active(false)
-                    .build();
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
-        }
-
-        WebhookResponse response = WebhookResponse.builder()
-                .id(savedWebhook.getId())
-                .url(savedWebhook.getUrl())
-                .active(savedWebhook.isActive())
-                .createdAt(savedWebhook.getCreatedAt())
-                .build();
-
-        return ResponseEntity.status(HttpStatus.CREATED).body(response);
+    public ResponseEntity<String> registerWebhook(@RequestBody @Valid WebhookRequest request) {
+        webhookService.registerWebhook(request);
+        return ResponseEntity.status(HttpStatus.CREATED).body("Webhook register successfully");
     }
 
     @PostMapping("/receive")
@@ -59,12 +39,15 @@ public class WebhookController {
                                                  HttpServletRequest request) throws JsonProcessingException {
         // TODO: Verify the signature to confirm the webhook is from a trusted source
 
+        // fire and forget : Offload heavy work to background
+        try{
+            webhookReceivingService.processWebhookAsync(payload, request.getRequestURL().toString());
+        } catch (Exception e) {
+            log.warn("Async webhook processing failed for transactionI={}: {}",
+                    payload.transactionId(), e.getMessage());
+        }
+
         // Respond immediately
-        ResponseEntity<String> response = ResponseEntity.ok("Webhook sent successfully");
-
-        // Offload heavy work to background
-        webhookReceivingService.processWebhookAsync(payload, request.getRequestURL().toString());
-
-        return response;
+        return ResponseEntity.ok("Webhook sent successfully");
     }
 }
